--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,3 +16,26 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+jobs:
+  npm-audit:
+    runs-on: ubuntu-latest
+    name: NPM Audit (and fix)
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: NPM Audit
+        uses: luisfontes19/npm-audit-action@v0.1.0
+        with:
+          project-path: "."
+          json: false
+          only: prod
+          level: critical
+          fix: true
+          package-lock-only: true
+          force: true
+          git-user: action-npm-audit
+          git-email: action-npm-audit
+          git-message: npm fix run from npm-audit action
+          git-pr-title: [SECURITY] NPM audit fix
+          git-branch: npm-audit-action
+          git-remote: origin
