--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,26 +16,45 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-jobs:
-  npm-audit:
-    runs-on: ubuntu-latest
-    name: NPM Audit (and fix)
+  insecure: 
+    runs-on: ubuntu-latest 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: NPM Audit
-        uses: luisfontes19/npm-audit-action@v0.1.0
-        with:
-          project-path: "."
-          json: false
-          only: prod
-          level: critical
-          fix: true
-          package-lock-only: true
-          force: true
-          git-user: action-npm-audit
-          git-email: action-npm-audit
-          git-message: npm fix run from npm-audit action
-          git-pr-title: [SECURITY] NPM audit fix
-          git-branch: npm-audit-action
-          git-remote: origin
+      - name : check out repositry code 
+        uses: actions/checkout@v3
+      - name: List files in the repositry 
+        run: | 
+          ls ${{ github.workspace }}
+      - run: npm install 
+        working-directory: insecure 
+      - id: insecure-audit 
+        run: npm audit 
+        working-directory: insecure 
+  mashup: 
+    runs-on: ubuntu-latest 
+      steps:
+        - name : check out repositry code 
+          uses: actions/checkout@v3
+        - name: List files in the repositry 
+          run: | 
+            ls ${{ github.workspace }}
+        - run: npm install 
+          working-directory: mashup
+        - name: Create annotation for build error
+          run: echo "::error file=app.js,line=1::Missing semicolon"
+        - id: mashup-audit 
+          run: npm audit 
+          working-directory: mashup
+  unittesting: 
+    runs-on: ubuntu-latest 
+      steps:
+        - name : check out repositry code 
+          uses: actions/checkout@v3
+        - name: List files in the repositry 
+          run: | 
+            ls ${{ github.workspace }}
+        - run: npm install 
+          working-directory: mashup
+        - id: mashup-audit 
+          run: npm audit 
+          working-directory: mashup
+        
