added lint check

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -44,6 +44,11 @@ jobs:
       - id: mashup-audit 
         run: npm audit 
         working-directory: mashup
+      - run: npm i lint 
+        working-directory: mashup
+      - run: npm run lint 
+        working-directory: mashup 
+        
   unittesting: 
     runs-on: ubuntu-latest 
     steps:
